--- a/다익스트라.md
+++ b/다익스트라.md
@@ -1,3 +1,6 @@
-최단 경로 문제 - 다익스트라 알고리즘
+★ 최단 경로 문제 - 다익스트라 알고리즘 ★
 =====================================
-1. 
+## 1. 다익스트라 알고리즘이란?
+* 특정한 노드에서 출발하여 다른 모든 노드로 가는 최단 경로를 계산한다.  
+* 다익스트라 최단 경로 알고리즘은 음의 간선이 없을 때 정상적으로 동작한다. (현실 세계의 도로는 음의 간선으로 표현되지 X)  
+* 다익스트라 최단 경로 알고리즘은 그리디 알고리즘으로 분류된다. __(매 상황에서 가장 비용이 적은 노드 선택)__
