--- a/다익스트라.md
+++ b/다익스트라.md
@@ -4,3 +4,15 @@
 * 특정한 노드에서 출발하여 다른 모든 노드로 가는 최단 경로를 계산한다.  
 * 다익스트라 최단 경로 알고리즘은 음의 간선이 없을 때 정상적으로 동작한다. (현실 세계의 도로는 음의 간선으로 표현되지 X)  
 * 다익스트라 최단 경로 알고리즘은 그리디 알고리즘으로 분류된다. __(매 상황에서 가장 비용이 적은 노드 선택)__
+## 2. 다익스트라 알고리즘 동작 과정
+1) 출발 노드 설정
+2) 최단 거리 테이블 초기화 (자기 자신에 대한 노드는 0으로 초기화)
+3) 방문하지 않은 노드 중에서 인접한 노드와의 최단 거리가 가장 짧은 노드 선택
+4) 해당 노드를 거쳐 다른 노드로 가는 비용을 계산하여 최단 거리 테이블 갱신
+5) 위 과정에서 3번과 4번 반복
+## 3. 다익스트라 알고리즘이 특징
+* 그리디 알고리즘 : 매 상황에서 방문하지 않은 가장 비용이 적은 노드를 선택해 임의의 과정을 반복
+* 단계를 거치며 한 번 처리된 노드의 최단 거리는 고정되어 더 이상 바뀌지 않음
+** 한 단계당 하나의 노드에 대한 최단 거리를 확실히 찾는 것으로 이해
+* 다익스트라 알고리즘을 수행한 뒤에 테이블에 각 노드까지의 최단 거리 정보가 저장됨
+** 완벽한 형태의 최단 경로를 구하려면 소스코드에 추가적인 기능을 더 넣어야함
